<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/stayfitbg"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.UserSignUpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/userNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="#FFFFFF"
            android:textSize="19sp"
            android:text="@string/user_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/editTextUserNameSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/emailpasswordborder"
            android:drawableLeft="@drawable/ic_baseline_person_24"
            android:drawablePadding="12dp"
            android:ems="14"
            android:fontFamily="@font/montserrat"
            android:hint="@string/enter_username"
            android:inputType="text"
            android:paddingStart="12dp"
            android:paddingTop="10dp"
            android:paddingEnd="8dp"
            android:paddingBottom="10dp"
            android:textColor="@color/black"
            android:textColorHint="#B7B6B6"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/editTextNameSurnameSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/emailpasswordborder"
            android:drawableLeft="@drawable/ic_baseline_person_24"
            android:drawablePadding="12dp"
            android:ems="14"
            android:fontFamily="@font/montserrat"
            android:hint="@string/enter_name_surname"
            android:inputType="text"
            android:paddingStart="12dp"
            android:paddingTop="10dp"
            android:paddingEnd="8dp"
            android:paddingBottom="10dp"
            android:textColor="@color/black"
            android:textColorHint="#B7B6B6"
            android:textSize="17sp" />


        <EditText
            android:textColor="@color/black"
            android:id="@+id/editTextEmailSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/emailpasswordborder"
            android:drawableLeft="@drawable/ic_baseline_email_24"
            android:drawablePadding="12dp"
            android:ems="14"
            android:inputType="textEmailAddress"
            android:fontFamily="@font/montserrat"
            android:textColorHint="#B7B6B6"
            android:hint="@string/enter_e_mail_address"
            android:paddingStart="12dp"
            android:paddingTop="10dp"
            android:paddingEnd="8dp"
            android:paddingBottom="10dp"
            android:textSize="17sp" />

        <EditText
            android:textColor="@color/black"
            android:id="@+id/editTextPhoneSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/emailpasswordborder"
            android:drawableLeft="@drawable/ic_baseline_local_phone_24"
            android:drawablePadding="12dp"
            android:ems="14"
            android:inputType="phone"
            android:fontFamily="@font/montserrat"
            android:textColorHint="#B7B6B6"
            android:hint="@string/enter_your_phone_number"
            android:paddingStart="12dp"
            android:paddingTop="10dp"
            android:paddingEnd="8dp"
            android:paddingBottom="10dp"
            android:textSize="17sp" />

        <EditText
            android:textColor="@color/black"
            android:id="@+id/editTextPassSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/emailpasswordborder"
            android:drawableLeft="@drawable/ic_baseline_lock_24"
            android:drawablePadding="12dp"
            android:ems="14"
            android:fontFamily="@font/montserrat"
            android:hint="@string/enter_your_password"
            android:textColorHint="#B7B6B6"
            android:inputType="textPassword"
            android:paddingStart="12dp"
            android:paddingTop="10dp"
            android:paddingEnd="8dp"
            android:paddingBottom="10dp"
            android:textSize="17sp"/>

        <EditText
            android:textColor="@color/black"
            android:id="@+id/editTextPassAgainSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/emailpasswordborder"
            android:drawableLeft="@drawable/ic_baseline_lock_24"
            android:drawablePadding="12dp"
            android:ems="14"
            android:inputType="textPassword"
            android:fontFamily="@font/montserrat"
            android:hint="@string/enter_your_password_again"
            android:textColorHint="#B7B6B6"
            android:paddingStart="12dp"
            android:paddingTop="10dp"
            android:paddingEnd="8dp"
            android:paddingBottom="10dp"
            android:textSize="17sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/userSignUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/girisyapselector"
            android:ems="11"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="19sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextSifreKayit2" />


    </LinearLayout>

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/progressBarSignUp"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:indeterminate="true"
        android:translationZ="2dp"
        android:elevation="10dp"
        android:indeterminateTint="@color/appButtonColor"
        android:layout_gravity="center" />


</FrameLayout>