<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/stayfitbg"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.PTSignInFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <TextView
            android:id="@+id/ptText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="95dp"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:text="@string/pt_login"
            android:layout_marginBottom="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/editTextEmail"/>


        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:background="@drawable/emailpasswordborder"
            android:drawableLeft="@drawable/ic_baseline_email_24"
            android:drawablePadding="12dp"
            android:ems="14"
            android:fontFamily="@font/montserrat"
            android:hint="@string/enter_e_mail_address"
            android:inputType="textEmailAddress"
            android:paddingStart="12dp"
            android:paddingTop="10dp"
            android:paddingEnd="8dp"
            android:paddingBottom="10dp"
            android:textColor="@color/black"
            android:textColorHint="#B7B6B6"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/emailpasswordborder"
            android:drawableLeft="@drawable/ic_baseline_lock_24"
            android:drawablePadding="12dp"
            android:textColor="@color/black"
            android:ems="14"
            android:fontFamily="@font/montserrat"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:layout_marginTop="15dp"
            android:paddingStart="12dp"
            android:textColorHint="#B7B6B6"
            android:paddingTop="10dp"
            android:paddingEnd="8dp"
            android:paddingBottom="10dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

        <TextView
            android:id="@+id/sifremiUnuttumText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/forgot_my_password"
            android:layout_marginBottom="7dp"
            android:textColor="#055AFF"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />

        <View
            android:id="@+id/view"
            android:layout_width="200dp"
            android:layout_height="0.2dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="7dp"
            android:background="#ABFFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/newAccount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/girisYapButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/girisyapselector"
            android:ems="10"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="19sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

        <ProgressBar
            android:visibility="gone"
            android:id="@+id/progressBarSignIn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:indeterminate="true"
            android:translationZ="2dp"
            android:elevation="10dp"
            android:indeterminateTint="@color/appButtonColor"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/newAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">


            <TextView
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/don_t_you_have_an_account"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/kayitOlText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/sign_up"
                android:textColor="#055AFF"
                android:textSize="15sp"
                android:textStyle="bold" />


        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>