<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:minWidth="270dp"
    android:gravity="center"
    android:layout_gravity="center"
    android:background="@drawable/dialog_workwith_bg"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/workWithText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/work_with"
        android:fontFamily="@font/montserrat_bold"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/sendButton"
        android:layout_marginTop="10dp"
        android:id="@+id/textInputLayout"
        app:hintEnabled="false"
        app:layout_constraintTop_toBottomOf="@id/workWithText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColorHint="@color/white"
            android:lines="4"
            android:hint="@string/hi_i_want_to_work_with_you"
            android:gravity="top" />
    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:minHeight="35dp"
        android:background="@drawable/girisyapselector"
        android:text="@string/send"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>